templates/default/css/main.css
/* ... */
body {
	background: #ebebeb;
}

body, .dialog {
	font-family: arial, verdana, helvetica, sans-serif;
	font-size: 12px;
	color: #333;
}

table {
	border-collapse: collapse;
}

td, div {
	font-family: verdana, arial, helvetica, sans-serif;
	text-align: left;
}

.print_only {
	display: none;
}

a:link,
a:visited {
	text-decoration: none;
}


/*
a:hover {
	color:#fff;
	background-color:#900;
	text-decoration:none; }
*/

a.anchor:link,
a.anchor:visited,
a.anchor:hover {
	color: #fff;
	background: #fff;
	font-size: 0;
	text-decoration: none;
	padding: 0;
}

a img {
	border: 0;
}

a.image img {
	border: none;
	margin: 0;
	padding: 0;
}

a.image:link,
a.image:visited,
a.image:hover {
	border: none;
	background: none;
	padding: 0;
}

a.toggle.active:link,
a.toggle.active:visited,
a.toggle.active:hover {
	background: #999 !important;
	color: #03c !important;
	text-decoration: none;
	font-weight: 400 !important;
}

p {
	/*font: 11px Arial, Helvetica, sans-serif;*/
	margin: 0 0 15px;
}

hr {
	background-color: #000;
	height: 1px;
	border: 0;
	margin: 10px 0;
}
form {
	margin: 0;
	padding: 0;
}
ins {
	background-color: #cfc;
	text-decoration: none;
}
del {
	color: #999;
}
code,
pre {
	font-family: "Bitstream Vera Sans Mono", monaco, "Courier New", courier, monospace;
	background: inherit;
	color: #333;
	font-size: 80%;
}


input, select, textarea {
	background: #FFFFFF url(../../../images/common/text-bg.gif) repeat-x scroll center top;
	border: 1px solid #CCCCCC;
	margin: 1px;
	padding: 0.2em 0.3em;
}


/*certainly unused... */
.red {
	color: #c00;
}

.blue {
	color: #06c;
}
.green {
	color: #390;
}



/*
.highlight {
	background-color: #ffc;
}
.double_underline{

	border-bottom: 3px double #555;

}


div.notice {
	background: #080;
}
div.alert {
	background: red;
}

.floatLeft {
	float: left;
}

.floatRight {
	float: right;
}
table tr.shaded td {
	background-color: #edf3fe;
}

.ClearAll {
	clear: both;
	font-size: 1px;
	margin: 0;
	padding: 0;
}
.Left {
	text-align: left;
	width: 70%;
	float: left;
	margin: 0;
	padding: 0;
}
.Right {
	text-align: left;
	float: left;
	width: 30%;
	margin: 0;
	padding: 0;
}
body.lobby
.Full .bottom {
	margin-bottom: 0;
}
.Right .col {
	padding: 0 0 0 9px;
}

*/
.si_center{
	text-align: center;
}
.si_right{
	text-align: right;
}



/* TYPOGRAPHY  ------------------------------*/

/*
h1 {
	font:bold 32px Arial, Helvetica, sans-serif;
	letter-spacing:normal;
	color:#000;
	position:relative;
	margin:5px 0 15px;
	padding:0 0 5px; }
*/

h1.admin {
	margin-bottom: 2px;
}

h2 {
	margin: 0 0 15px;
}

h1, h2, h3{
	color:#4B7296;
}


/* @end */


/* @group Si Install
------------------------------------------------------------------- */

#si_install_logo {
	text-align: center;
}

/* @group Si Wrap
------------------------------------------------------------------- */
.si_wrap{
	width: 990px;

	margin: 0 auto;
}
/* @end */




/* @group Si Header
------------------------------------------------------------------- */
#si_header {
	margin: 0px;
	padding: 0px;
	line-height: 240%;
	text-align: right;
	background: #878484;
	color: #EEE;
	border-bottom: 1px solid #666;
	font-size: 11px;
}
#si_header A{
	color: #CCF;
}

#si_header .si_wrap {
	padding-right: 30px;
	text-align: right;
}

.gmailLoader {
	background-color: #CF4342;
	color: #fff;
	top: 0px;
	right: 0px;
	position: fixed;
	padding: 3px
}
/*
.si_grey_background {
	background: #e5e5e5;
}


#top {
	text-align: center;
}

.col {
	text-align: center;
}*/

/* @end */



/* @group Si Footer
------------------------------------------------------------------- */
#si_footer{
	font-size: 10px;
	padding-top: 15px;
	padding-bottom: 15px;
	color: #888;
}
#si_footer A{
	color: #333;
}
#si_footer .si_wrap{
	text-align: center;
}
/* @end */




/* @group Structure  (To SI-Fi)
------------------------------------------------------------------- */
div#Container {
	padding: 10px;
	margin-top: -54px;
	padding-top: 62px;
	padding-bottom: 30px;
	background: #FFFFFF;
	border: 1px solid #ddd;
	z-index: 1;
	-moz-box-shadow: 0 3px 5px #CCCCCC;
	-webkit-box-shadow: 0 3px 5px #CCCCCC;
	box-shadow: 0 3px 5px #CCCCCC;

	-webkit-border-top-left-radius: 6px;
	-webkit-border-top-right-radius: 6px;
	-moz-border-radius-topleft: 6px;
	-moz-border-radius-topright: 6px;
	-webkit-border-bottom-left-radius: 6px;
	-webkit-border-bottom-right-radius: 6px;
	-moz-border-radius-bottomleft: 6px;
	-moz-border-radius-bottomright: 6px;
	border-radius: 6px;
	overflow: hidden;
}

/* @end */



/* @group Si Buttons
------------------------------------------------------------------- */
.si_toolbar_top{
/*	margin-top: 10px;*/
	margin-bottom: 20px;
}
.si_toolbar{
	text-align: center;
}

.si_toolbar_form{
	margin: 10px 0;
}
.si_toolbar_top_left{
    text-align: left;
    margin-left: 39px;
}

.si_toolbar BUTTON, .si_toolbar A{
	display: inline-block;
	border: 1px solid #AAA;
	-moz-border-radius: 7px;
	-webkit-border-radius: 7px;
	border-radius: 7px;
	background: rgb(249,249,249);
	background: -moz-linear-gradient(top,  rgba(249,249,249,1) 0%, rgba(224,224,224,1) 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(249,249,249,1)), color-stop(100%,rgba(224,224,224,1)));
	background: -webkit-linear-gradient(top,  rgba(249,249,249,1) 0%,rgba(224,224,224,1) 100%);
	background: -o-linear-gradient(top,  rgba(249,249,249,1) 0%,rgba(224,224,224,1) 100%);
	background: -ms-linear-gradient(top,  rgba(249,249,249,1) 0%,rgba(224,224,224,1) 100%);
	background: linear-gradient(to bottom,  rgba(249,249,249,1) 0%,rgba(224,224,224,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f9f9f9', endColorstr='#e0e0e0',GradientType=0 );
    margin-right: 45px;
}
.si_toolbar A{
	border-left: 1px solid #ccc;
	display: inline-block;
	margin: 0;
	padding: 8px 10px;
	min-width: 30px;
	text-align: center;
	color: #333;
	text-shadow:
		0px -1px 0px rgba(000,000,000,0.2),
		0px 1px 0px rgba(255,255,255,1);
}
/* ... */

